--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 This cookbooks installs Redis 2 key-value datastore server. Redis can be installed from packages (where available) or source.
 
 = REQUIREMENTS:
-For compiling from source: build-essential
+For compiling from source: build-essential, ark
 
 = ATTRIBUTES: 
 [redis2.install_from]  _package_ to install from distro packages, any other value to install from source.
@@ -26,5 +26,5 @@ The _master_ attribute will set up redis as a slave of a the same redis instance
 
 == Recipes
 * redis2::auto - automagically call redis_instance for every instance defined in the <tt>node["redis2"]["instances"]</tt> tree.
-* redis2::default_instance - use this if you want a simple recipe with a single redis instance
+* redis2::default_instance - use this if you want a simple recipe with a single redis instance called "redis_prime"
 It's generally not a good idea to use the redis2::default_instance recipe. If you want a single redis instance, either use redis_instance definition or redis2::auto and define your instance in the attributes tree.
