--- a/README.rdoc
+++ b/README.rdoc
@@ -17,10 +17,11 @@ redis_instance "datastore" do
   port 8866
   data_dir "/mnt/redis/datastore"
   master master_node
+  nofile 16384
 end
 </tt>
 
-_port_, <em>data_dir</em> and _master_ are the only attributes directly configurable using the definition syntax. Other attributes can be configured using the normal attribute interface under the <tt>node["redis2"]["instances"][instance_name]</tt> scope. Missing attributes will be merged from <tt>node["redis2"]["instances"]["default"]</tt>
+_nofile_, _port_, <em>data_dir</em> and _master_ are the only attributes directly configurable using the definition syntax. Other attributes can be configured using the normal attribute interface under the <tt>node["redis2"]["instances"][instance_name]</tt> scope. Missing attributes will be merged from <tt>node["redis2"]["instances"]["default"]</tt>
 
 The _master_ attribute will set up redis as a slave of a the same redis instance on another server. It will not set <tt>node["redis2"]["instances"][instance_name]["replication"]["role"]</tt> (which can be _slave_ or _master_), because redis can be both at the same time (e.g. chained masters).
 
